Update Aegis Vault Android V.4.0.0

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,42 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.aegisandroid">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.USE_BIOMETRIC" />
+    <uses-permission android:name="android.permission.USE_FINGERPRINT" />
+
+    <!-- Android 11+ package visibility: Autofill'in tarayıcıları görebilmesi için -->
+    <queries>
+        <!-- HTTPS intent'leri (genel) -->
+        <intent>
+            <action android:name="android.intent.action.VIEW" />
+            <category android:name="android.intent.category.BROWSABLE" />
+            <data android:scheme="https" />
+        </intent>
+        <!-- Chrome tabanlı tarayıcılar -->
+        <package android:name="com.android.chrome" />
+        <package android:name="com.chrome.beta" />
+        <package android:name="com.chrome.dev" />
+        <package android:name="com.chrome.canary" />
+        <!-- Microsoft Edge -->
+        <package android:name="com.microsoft.emmx" />
+        <!-- Brave Browser -->
+        <package android:name="com.brave.browser" />
+        <!-- Samsung Internet -->
+        <package android:name="com.sec.android.app.sbrowser" />
+        <!-- Mozilla Firefox -->
+        <package android:name="org.mozilla.firefox" />
+        <package android:name="org.mozilla.fenix" />
+        <!-- Kiwi Browser (Chromium) -->
+        <package android:name="com.kiwibrowser.browser" />
+        <!-- DuckDuckGo -->
+        <package android:name="com.duckduckgo.mobile.android" />
+        <!-- Aloha Browser -->
+        <package android:name="com.alohamobile.browser" />
+        <!-- Opera -->
+        <package android:name="com.opera.browser" />
+        <!-- Vivaldi -->
+        <package android:name="com.vivaldi.browser" />
+    </queries>
 
     <application
       android:name=".MainApplication"
@@ -23,5 +59,24 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
       </activity>
+
+      <!-- Aegis Autofill Service (Android 8.0+) -->
+      <service
+        android:name="com.aegisandroid.AegisAutofillService"
+        android:label="Aegis Vault"
+        android:icon="@mipmap/ic_launcher"
+        android:enabled="true"
+        android:directBootAware="true"
+        android:description="@string/autofill_description"
+        android:exported="true"
+        android:permission="android.permission.BIND_AUTOFILL_SERVICE">
+        <intent-filter>
+          <action android:name="android.service.autofill.AutofillService" />
+        </intent-filter>
+        <meta-data
+          android:name="android.autofill"
+          android:resource="@xml/autofill_service_config" />
+      </service>
+
     </application>
 </manifest>
