--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -46,6 +46,7 @@ react {
     /* Hermes Commands */
     //   The hermes compiler command to run. By default it is 'hermesc'
     // hermesCommand = "$rootDir/my-custom-hermesc/bin/hermesc"
+    hermesCommand = "$rootDir/../hermesc.bat"
     //
     //   The list of flags to pass to the Hermes compiler. By default is "-O", "-output-source-map"
     // hermesFlags = ["-O", "-output-source-map"]
@@ -82,8 +83,8 @@ android {
         applicationId "com.aegisandroid"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
-        versionName "1.0"
+        versionCode 11
+        versionName "0.1.1"
     }
     signingConfigs {
         debug {
@@ -105,6 +106,13 @@ android {
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
     }
+    packagingOptions {
+        pickFirst '**/libcrypto.so'
+        pickFirst '**/libssl.so'
+        jniLibs {
+            useLegacyPackaging = true // 16KB page size support for Android 15/16 preview
+        }
+    }
 }
 
 dependencies {
@@ -115,5 +123,13 @@ dependencies {
         implementation("com.facebook.react:hermes-android")
     } else {
         implementation jscFlavor
+    }
+
+    implementation "net.zetetic:sqlcipher-android:4.5.6@aar"
+}
+
+tasks.whenTaskAdded { task ->
+    if (task.name.contains("compileReleaseArtProfile")) {
+        task.enabled = false
     }
 }
